--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ body {
 .text-input,
 .select-input {
   font-size: 20px;
-  color: #fff;
+  color: #fefefe;
 }
 .select-input {
   margin-bottom: 40px;
